scripts/nullaway/annotator/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8.txt
../annotator/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/Variable.java:55: error: [NullAway] method returns @Nullable, but superclass method query.Token.apply(query.Substitution) returns @NonNull
	public Token apply(Substitution s) {
	             ^
    (see http://t.uber.com/nullaway )
../annotator/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/io/RDFFileReader.java:19: error: [NullAway] enhanced-for expression getLines(filePath) is @Nullable
		for ( final String line : getLines(filePath) ) {
		                                  ^
    (see http://t.uber.com/nullaway )
../annotator/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/solver/DecidablePLSATSolverTest.java:14: error: [NullAway] @NonNull static field sut not initialized
	private static PLSATSolver sut;
	                           ^
    (see http://t.uber.com/nullaway )
3 errors
